--- a/01_bonjour_correction.html
+++ b/01_bonjour_correction.html
@@ -14,6 +14,6 @@
 		<li>afficher ensuite dans une autre boîte de dialogue le nom et le prénom de l'utilisateur</li>
 		<li>Attention à bien respecter les espaces entre les mots dans le message final.</li>
 	</ul>
-    <script type="text/javascript" src="js/bonjour.js"></script>
+    <script type="text/javascript" src="js/bonjour_correction.js"></script>
 </body>
 </html>
