--- a/rock_paper_scissors_avec_boucle _avec_fonction_correction.html
+++ b/rock_paper_scissors_avec_boucle _avec_fonction_correction.html
@@ -7,6 +7,8 @@
 </head>
 <body> 
     <h1>JOUONS ROCK PAPER SCISSORS</h1>
+    <button onclick="myFunction()">Cliquez ici</button>
+    <h2></h2>
 
 
 
