--- a/météo.html
+++ b/météo.html
@@ -11,7 +11,7 @@
         <h1>Météo du jour</h1>
         <form id="form">
             <label for="city">Entrez un nom de ville</label>
-            <input type="ville" id="earth, appid" />
+            <input type="ville" id="city" />
         </form>
 
         <div class="container">
