--- a/liste_de_course.html
+++ b/liste_de_course.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parité</title>
+    <title>Liste De Course</title>
 </head>
 <body>
+    <h1>Liste de courses</h1>
+    <div id="message"></div>
 
-    
-    
-    <script type="text/javascript" src="js/ni_oui_ni_non_correction.js"></script>
+    <script type="text/javascript" src="js/liste_de_course.js"></script>
 </body>
 </html>
