--- a/permi_de_conduire.html
+++ b/permi_de_conduire.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parité</title>
+    <title>Permi De Conduire</title>
 </head>
 <body>
+    <button onclick="myFunction()">Cliquez ici</button>
 
-    
-    
-    <script type="text/javascript" src="js/ni_oui_ni_non_correction.js"></script>
+
+
+    <script type="text/javascript" src="js/permi_de_conduire.js"></script>
 </body>
 </html>
