--- a/inventaire_correction.html
+++ b/inventaire_correction.html
@@ -17,6 +17,6 @@
     <div id="inventaire"></div>
     <div id="result"></div>
 
-    <script src="js/inventaire.js"></script>
+    <script src="js/inventaire_correction.js"></script>
 </body>
 </html>
