--- a/Citation_correction.html
+++ b/Citation_correction.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citations</title>
     <link rel="stylesheet" href="css/citation.css">
-    <script src="js/citation_exo.js"></script>
+    <script src="js/citation_correction.js"></script>
 </head>
 <body>
     <div class="container">
