--- a/etoile_correction.html
+++ b/etoile_correction.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Étoiles aléatoires</title>
     <link rel="stylesheet" href="css/etoile.css">
-    
+    <script src="js/etoile_correction.js"></script>
 </head>
 <body>
 
-    <script src="js/etoile.js"></script>
 </body>
 </html>
