--- a/done.html
+++ b/done.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Étoiles aléatoires</title>
-    <link rel="stylesheet" href="css/etoile.css">
-    
+    <title>Site ouvert</title>
+    <link rel="stylesheet" href="css/deadline.css">
 </head>
-<body>
+<body id="done">
 
-    <script src="js/etoile.js"></script>
 </body>
 </html>
