--- a/countdown_correction.html
+++ b/countdown_correction.html
@@ -11,6 +11,6 @@
     <!-- Affichage du compte à rebours -->
     <div id="countdown"></div>
 
-    <script src="js/countdown_exo.js"></script>
+    <script src="js/countdown_correction.js"></script>
 </body>
 </html>
