--- a/sentence_localstorages_correction.html
+++ b/sentence_localstorages_correction.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phrases</title>
+    <title>Phrases avec localStorage</title>
     <link rel="stylesheet" href="css/sentences.css">
-    <script src="js/sentences_exo.js"></script>
+    <script src="js/sentences_localstorages_correction.js"></script>
 </head>
 <body>
-    <h1>Phrases</h1>
+    <h1>Phrases avec localStorage</h1>
     <div id="sentences-list"></div>
+    <p id="no-sentences"></p>
+    
 </body>
 </html>
