--- a/multilingue_correction.html
+++ b/multilingue_correction.html
@@ -11,8 +11,8 @@
         <nav>
             <div class="logo">Logo</div>
             <div class="language-switch">
-                <button onclick="">Français</button>
-                <button onclick="">English</button>
+                <button onclick="setLanguage('fr')">Français</button>
+                <button onclick="setLanguage('en')">English</button>
             </div>
         </nav>
         <div class="hero">
@@ -47,6 +47,6 @@
     <footer>
         <p id="footer-text">© 2024 - Tous droits réservés. Mentions légales</p>
     </footer>
-    <script src="js/multilingue_exo.js"></script>
+    <script src="js/multilingue_correction.js"></script>
 </body>
 </html>
